# cosima-controller

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/cosima-controller/controller/: rtt_cart_impedance_controller_ALT.hpp  rtt_cart_pid_controller.hpp  rtt_constant_force_controller.hpp  rtt_control_stack.hpp  rtt_cs.hpp  rtt_joint_pd_controller.hpp  rtt_stack_cart.hpp  rtt_stack_cart_wo_js.hpp  rtt_stacked_controller.hpp
include/cosima-controller/controller/gravity_compensation/: rtt_joint_gravity_compensation.hpp
include/cosima-controller/coordination/: monitor_if.hpp  monitor_wrench.hpp  rtt_contact_situation_switcher.hpp
include/cosima-controller/introspection/: rtt-call-sample-collector.hpp  rtt-introspection-base.hpp  rtt-introspection-reporter.hpp
include/cosima-controller/kinematics_dynamics/: kin_dyn_if.hpp  kin_dyn_kdl.hpp  kin_dyn_multi_arm.hpp  rtt_kin_dyn_multi_arm.hpp
include/cosima-controller/kinematics_dynamics/models/: kukaLWRModel.h
include/cosima-controller/prioritization/: rtt_dynamic_task_prioritization.hpp  rtt_ghc_projections.hpp  rtt_robot_contact_situations.hpp
include/cosima-controller/scheduling/: barrier-condition.hpp  rtt-core-scheduler.hpp
include/cosima-controller/task/: control_component_container.hpp  control_objective_container.hpp  manipulator_data_supplier.hpp  robot_container.hpp  rtt_task_describer_synthesis.hpp  vm_container.hpp  vm_geometry.hpp  vm_geometry_bar.hpp  vm_geometry_box.hpp
include/cosima-controller/trajectories/: rtt_bezier_trajectory.hpp  rtt_linear_trajectory.hpp  rtt_pose_interpolator.hpp
include/cosima-controller/transformation/: feedback-combiner.hpp  torque-command-separator.hpp
include/cosima-controller/util/: LowPassFilter.hpp  MatrixDecomposition.hpp  Pseudoinversion.hpp
launch/: test.launch
scripts/: test.ops  test_complex_spawn.ops  test_constraint_no.yaml  test_constraint_x.yaml  test_constraint_z.ops  test_constraint_z.yaml  test_flex_clamp_sim.ops  test_new.ops  test_real.ops  test_rtt_cart.ops  test_rtt_cart_pd_controller.ops  test_rtt_cart_polishing.ops  test_rtt_cart_polishing_sched.ops  test_rtt_cart_qp.ops  test_rtt_coman.ops  test_rtt_joint_gravity_compensation.ops  test_rtt_joint_pd_controller.ops  test_schunk_gripper.ops  test_spawn_all_robots.ops  test_spawn_kuka_gripper.ops
scripts/real_tests/: test_real_interface.ops  test_real_qp.ops  test_real_qp_bak.ops
src/controller/: rtt_cart_impedance_controller_ALT.cpp  rtt_cart_pid_controller.cpp  rtt_constant_force_controller.cpp  rtt_control_stack.cpp  rtt_joint_pd_controller.cpp
src/controller/gravity_compensation/: rtt_joint_gravity_compensation.cpp
src/coordination/: monitor_if.cpp  monitor_wrench.cpp  rtt_contact_situation_switcher.cpp
src/introspection/: rtt-call-sample-collector.cpp  rtt-introspection-base.cpp  rtt-introspection-reporter.cpp
src/kinematics_dynamics/: README.md  kin_dyn_kdl.cpp  kin_dyn_multi_arm.cpp  rtt_kin_dyn_multi_arm.cpp
src/kinematics_dynamics/models/: kukaLWRModel.cpp
src/prioritization/: rtt_dynamic_task_prioritization.cpp  rtt_ghc_projections.cpp  rtt_robot_contact_situations.cpp
src/scheduling/: barrier-condition.cpp  barrier-data.cpp  core-scheduler-service.cpp  rtt-core-scheduler.cpp
src/task/: control_component_container.cpp  control_objective_container.cpp  robot_container.cpp  rtt_task_describer_synthesis.cpp  vm_container.cpp  vm_geometry_bar.cpp  vm_geometry_box.cpp
src/trajectories/: rtt_bezier_trajectory.cpp  rtt_linear_trajectory.cpp  rtt_pose_interpolator.cpp
src/transformation/: feedback-combiner.cpp  torque-command-separator.cpp
