<?xml version="1.0"?>
<package format="2">
  <name>cosima-controller</name>
  <version>0.1.0</version>
  <description>The cosima-controller package</description>
  <maintainer email="dwigand@cor-lab.de">Dennis Leroy Wigand</maintainer>
  <license>LGPLv3</license>
  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/cosima-controller</url> -->
  <author email="dwigand@cor-lab.de">Dennis Leroy Wigand</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>

  <depend>liborocos-kdl-dev</depend>
  <build_depend>kdl_parser</build_depend>

  <depend version_gte="1.3.0">orocos_kdl</depend>
  <depend>yaml-cpp</depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <!-- Build deps are queried automatically with orocos_use_package() -->
  <!-- <build_depend>rtt_ros</build_depend> -->
  <!-- ROS Msg Typekits and Srv Proxies -->
  <!-- <build_depend>rtt_sensor_msgs</build_depend> -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <!-- <rtt_ros> -->
      <!-- Plugin deps are loaded automatically by the rtt_ros import service -->
      <!-- <plugin_depend>rtt_sensor_msgs</plugin_depend> -->
    <!-- </rtt_ros> -->
  </export>
</package>
